@@ -62,6 +62,8 @@ cd mcp
 ./gradlew bootRun --args='--spring.profiles.active=dev'
 ```
 
+**JDK 25+ の場合:** `bootRun` および `test` では Gradle が自動で `--enable-native-access=io.netty.common` を付与するため、Netty の `sun.misc.Unsafe` 非推奨警告は出ません。ビルドした JAR を直接実行する場合は `java --enable-native-access=io.netty.common -jar mcp.jar` のように指定してください。
+
 **開発時の設定 (`mcp/src/main/resources/application-dev.yml`):**
 - `logging.level.root`: DEBUG
 - セキュリティ設定: ダミーのBearerトークンを受け入れる設定にしておくと、Goクライアントなしで `curl` テストが可能です。
